--- a/index.html
+++ b/index.html
@@ -189,20 +189,18 @@
         </div>
     </section>
 
-
-  <section id="purchase">
-    <div class="container">
-        <h2>Курсты сатып алу</h2>
-        <p>Барлық модульдерге толық қолжетімділік</p>
-        <div class="pricing">
-            <p class="old-price">599 990 тг</p>
-            <p class="new-price">399 990 тг</p>
-            <p class="discount">-50%</p>
+    <section id="purchase">
+        <div class="container">
+            <h2>Курсты сатып алу</h2>
+            <p>Барлық модульдерге толық қолжетімділік</p>
+            <div class="pricing">
+                <p>Дәл қазір курсты алатын болсаңыз скидка</p>
+                <p class="discount">50%</p>
+            </div>
+            <button class="btn-buy" onclick="buyCourse()">Курсты сатып алу</button>
         </div>
-        <button class="btn-buy" onclick="buyCourse()">Курсты сатып алу</button>
-    </div>
-</section>
-
+    </section>
+    
     
 
     <footer>
