--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Онлайн курс «IPOTEKA START»</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
   
@@ -195,7 +197,7 @@
             <p>Барлық модульдерге толық қолжетімділік</p>
             <div class="pricing">
                 <p>Дәл қазір курсты алатын болсаңыз скидка</p>
-                <p class="discount">50%</p>
+                <p class="discount">- 50%</p>
             </div>
             <button class="btn-buy" onclick="buyCourse()">Курсты сатып алу</button>
         </div>
