--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <p>Барлық модульдерге толық қолжетімділік</p>
             <div class="pricing">
                 <p>Дәл қазір курсты алатын болсаңыз скидка</p>
-                <p class="discount">- 50%</p>
+                <p class="discount">-50%</p>
             </div>
             <button class="btn-buy" onclick="buyCourse()">Курсты сатып алу</button>
         </div>
